--- a/frontend/src/app/components/main/main.component.html
+++ b/frontend/src/app/components/main/main.component.html
@@ -1,3 +1,6 @@
+<ion-header>
+  <ion-title>Menu principal</ion-title>
+</ion-header>
 <div class="card bg-dark text-black">
   <img class="card-img" src="https://t1.ev.ltmcdn.com/es/posts/5/8/0/ventajas_y_desventajas_de_la_energia_eolica_1085_600.jpg" alt="Card image">
   <div class="card-img-overlay">
