funciona add y delete

--- a/frontend/src/app/components/bikeslist/bikeslist.component.html
+++ b/frontend/src/app/components/bikeslist/bikeslist.component.html
@@ -1,52 +1,47 @@
+
 <div class="container-auto">
   <table class="table table-bordered">
     <h1 class="blue-text text-darken-2"> All Bikes</h1>
   </table>
   </div>
-
-<h2 class="blue-text text-darken-2"> Available Bikes</h2>
+  <ion-item>
+      <ion-label>Available Bikes</ion-label>
+    </ion-item>
 <div class="container-auto">
-  <table class="table table-bordered">
-      <thead class="info">
-      <th class="table-success">Name</th>
-      <th class="table-success">Kms</th>
-      <th class="table-success">Description</th>
-      <th class="table-success">Action</th>
-    </thead>
+    <ion-list>
       <tr *ngFor ="let bike of bikes; let i=index">
       <ng-container *ngIf="bike.state">
-        <td class="table-light">{{bike.name}}</td>
-        <td class="table-light">{{bike.kms}}</td>
-        <td class="table-light">{{bike.description}}</td>
-        <td class="table-light">
-        </td>
+        <ion-slides>
+          <ion-item> <ion-label>Name: {{bike.name}}</ion-label> </ion-item>
+          <ion-item> <ion-label>Kms: {{bike.kms}}</ion-label> </ion-item>
+          <ion-item> <ion-label>Description: {{bike.description}}</ion-label> </ion-item>
+          <ion-item><ion-label>Más info</ion-label></ion-item>
+        </ion-slides>
       </ng-container>
       </tr>
-</table>
+  </ion-list>
 
 </div>
-<h2 class="blue-text text-darken-2"> Not assigned Bikes</h2>
+<ion-item>
+    <ion-label>Not Asigned Bikes</ion-label>
+  </ion-item>
 <div class="container-auto">
 
-  <table class="table table-bordered">
-      <thead class="info">
-          <th class="table-success">Name</th>
-          <th class="table-success">Kms</th>
-          <th class="table-success">Description</th>
-          <th class="table-success">Action</th>
-    </thead>
-    
+<ion-list>
+
       <tr *ngFor ="let bike of bikes2; let i=index">
         <ng-container *ngIf="!bike.state">
-            <td class="table-light">{{bike.name}}</td>
-            <td class="table-light">{{bike.kms}}</td>
-            <td class="table-light">{{bike.description}}</td>
-            <td class="table-light"></td>
+            <ion-slides>
+                <ion-item> <ion-label>Name: {{bike.name}}</ion-label> </ion-item>
+                <ion-item> <ion-label>Kms: {{bike.kms}}</ion-label> </ion-item>
+                <ion-item> <ion-label>Description: {{bike.description}}</ion-label> </ion-item>
+                <ion-item><ion-label>Más info</ion-label></ion-item>
+              </ion-slides>
       </ng-container> 
       </tr>
-</table>
+  </ion-list>
 </div>
 
 <p>
-<button class="logout" [routerLink]="['']"><i class="fa fa-toggle-left" aria-hidden="true">
-</i> Back to main menu</button></p>
+<ion-button color="success" size="large"[routerLink]="['']"><i class="fa fa-toggle-left" aria-hidden="true">
+</i> Back to main menu</ion-button></p>
