--- a/frontend/src/app/components/deletebike/deletebike.component.html
+++ b/frontend/src/app/components/deletebike/deletebike.component.html
@@ -1,8 +1,2 @@
-<p> Bike for delete </p>
-<p></p>
-<div *ngFor = 'let id of bike; let i=index'>
-    <h6> The bike is: {{id}}</h6>
-    <p></p>
-     <button type="submit" (click)="deleteBike(id)">Delete bike</button>  
-    <p></p>
-</div>
+<p> deletebike works  </p>
+<p>
