--- a/frontend/src/app/components/bikes/bikes.component.html
+++ b/frontend/src/app/components/bikes/bikes.component.html
@@ -1,57 +1,53 @@
-<ion-header>
-  <ion-title>List of Available Bikes</ion-title>
-</ion-header>
-
-<ion-content>  
-
-<div class="container-auto">
-<table class="table table-bordered">
-    <thead class="info">
-    <th class="table-success">Name</th>
-    <th class="table-success">Kms</th>
-    <th class="table-success">Description</th>
-    <th class="table-success">Action</th>
-  </thead>
-    <tr *ngFor ="let bike of bikes; let i=index">
-    <ng-container *ngIf="bike.state">
-      <td class="table-light">{{bike.name}}</td>
-      <td class="table-light">{{bike.kms}}</td>
-      <td class="table-light">{{bike.description}}</td>
-      <td class="table-light">
-      </td>
-    </ng-container>
-    </tr>
-</table>
-
-</div>
-
-</ion-content> 
-
-<ion-header>
-<ion-title>List of Unavailable Bikes</ion-title>
-</ion-header>
-
-<div class="container-auto">
-
-<table class="table table-bordered">
-    <thead class="info">
-        <th class="table-success">Name</th>
-        <th class="table-success">Kms</th>
-        <th class="table-success">Description</th>
-        <th class="table-success">Action</th>
-  </thead>
+<ion-item>
+  <ion-label>Available Bikes</ion-label>
+</ion-item>
+  <div class="container-auto">
+      <ion-list>
+        <tr *ngFor ="let bike of bikes; let i=index">
+        <ng-container *ngIf="bike.state">
+          <ion-slides>
+            <ion-item> <ion-label>Name</ion-label> </ion-item>
+            <ion-item> <ion-label>Kms</ion-label> </ion-item>
+            <ion-item> <ion-label>Description</ion-label> </ion-item>
+          
+          </ion-slides>
+          <ion-slides>
+              <ion-item> <ion-label>{{bike.name}}</ion-label> </ion-item>
+              <ion-item> <ion-label>{{bike.kms}}</ion-label> </ion-item>
+              <ion-item> <ion-label>{{bike.description}}</ion-label> </ion-item>
+              <ion-button color="danger" size="large" (click)="deleteBike(bike._id)"> Delete </ion-button>
+            </ion-slides>
+        </ng-container>
+        </tr>
+    </ion-list>
   
-    <tr *ngFor ="let bike of bikes2; let i=index">
-      <ng-container *ngIf="!bike.state">
-          <td class="table-light">{{bike.name}}</td>
-          <td class="table-light">{{bike.kms}}</td>
-          <td class="table-light">{{bike.description}}</td>
-          <td class="table-light"></td>
-    </ng-container> 
-    </tr>
-</table>
-</div>
-
-<p>
-<ion-button  class="logout" [routerLink]="['']"><i class="fa fa-toggle-left" aria-hidden="true">
-</i> Back to main menu</ion-button ></p>
+  </div>
+  <ion-item>
+      <ion-label>Not Asigned Bikes</ion-label>
+    </ion-item>
+  <div class="container-auto">
+  
+  <ion-list>
+  
+        <tr *ngFor ="let bike of bikes2; let i=index">
+          <ng-container *ngIf="!bike.state">
+                 <ion-slides>
+                  <ion-item> <ion-label>Name</ion-label> </ion-item>
+                  <ion-item> <ion-label>Kms</ion-label> </ion-item>
+                  <ion-item> <ion-label>Description</ion-label> </ion-item>
+                
+                </ion-slides>
+                <ion-slides>
+                    <ion-item> <ion-label>{{bike.name}}</ion-label> </ion-item>
+                    <ion-item> <ion-label>{{bike.kms}}</ion-label> </ion-item>
+                    <ion-item> <ion-label>{{bike.description}}</ion-label> </ion-item>
+                    <ion-button color="success" size="large" (click)="addBike(bike._id)"> Add </ion-button>
+                  </ion-slides>
+        </ng-container> 
+        </tr>
+    </ion-list>
+  </div>
+  
+  <p>
+  <ion-button color="success" size="large"[routerLink]="['']"><i class="fa fa-toggle-left" aria-hidden="true">
+  </i> Back to main menu</ion-button></p>
