--- a/frontend/src/app/components/stations/stations.component.html
+++ b/frontend/src/app/components/stations/stations.component.html
@@ -1,19 +1,25 @@
-<h2 class="blue-text text-darken-2"> This are the stations available</h2>
+
 <div class="container-auto">
-    <table class="table table-bordered">
-        <thead class="info">
-        <th class="table-success">Station</th>
-        <th class="table-success">State</th>
-        <th class="table-success">Description</th>
-        <th class="table-success">Action</th>
-      </thead>
-        <tr *ngFor="let station of stations">
-          <td class="table-light">{{station.station}}</td>
-          <td class="table-light">{{station.state}}</td>
-          <td class="table-light">{{station.description}}</td>
-          <td class="table-light"><button class="btn btn-primary  btn-block" [routerLink]=
-            "['stationBikes', station._id]"><i class="fa fa-eye"></i> View</button>
-          </td>
-        </tr>
-  </table>
+    <div class="container-auto">
+        <ion-item>
+            <ion-label>This are the stations available</ion-label>
+          </ion-item>
+        </div>
+    <ion-list>
+    <tr *ngFor="let station of stations">
+    <ion-slides>
+        <ion-item> <ion-label>Station</ion-label> </ion-item>
+        <ion-item> <ion-label>State</ion-label> </ion-item>
+        <ion-item> <ion-label>Description</ion-label> </ion-item>
+    
+    </ion-slides>
+    <ion-slides>
+        <ion-item> <ion-label>{{station.station}}</ion-label> </ion-item>
+        <ion-item> <ion-label>{{station.state}}</ion-label> </ion-item>
+        <ion-item> <ion-label>{{station.description}}</ion-label> </ion-item>
+        <ion-button color="success" size="large" [routerLink]=
+        "['stationBikes',station._id]">View</ion-button>
+    </ion-slides>
+  </tr>
+    </ion-list>
 </div>
